fixes issue #9 but I decided to hide pending applications by making the live in a collapsed div that can be toggled open with a click, so if someone needs to check if their friend has started applying or not, it's possible - just not distracting

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -31,3 +31,9 @@ body.admin.applications.show {
   }
 }
 
+
+.pending-applications-header{
+  a {
+    color: #a09d9d
+  }
+}
